Fix bugs & Reader improvement (#1009)
* fix: wrong chapter order

* fix: reader footer styles

* make swipe getures less sensitive

* fix: update only ongoing novels option

* synchonize update library

* add horizontal scrollbar

* update swipe gesture sensitive

* no swipe when image modal is visible

* add bionic reading

* fix: import untitled epub

--- a/android/app/src/main/assets/css/index.css
+++ b/android/app/src/main/assets/css/index.css
@@ -97,7 +97,23 @@ img {
     top: 50%;
     transform: translateY(-50%);
     right: 5vw;
-    transition: 150ms;
+}
+
+#ToolWrapper.horizontal {
+    top: unset;
+    right: unset;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 120px;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+}
+
+@media only screen and (min-width: 500px) {
+  #ToolWrapper.horizontal {
+    bottom: 80px;
+  }
 }
 
 #ToolWrapper.hidden {
@@ -105,8 +121,18 @@ img {
     right: 0;
 }
 
+#ToolWrapper.hidden.horizontal {
+    opacity: 0;
+    bottom: 0;
+    right: unset;
+}
+
 #TTS-Controller {
     display: block;
+}
+
+#ToolWrapper.horizontal > #TTS-Controller {
+    margin-left: 4px;
 }
 
 #TTS-Controller button{
@@ -118,7 +144,7 @@ img {
     fill: var(--theme-onSurface);
 }
 
-#ScrollBar {
+#ToolWrapper > #ScrollBar {
     margin-top: 8px;
     width: 2.4rem;
     height: 45vh;
@@ -130,35 +156,35 @@ img {
     user-select: none;
 }
 
-.scrollbar-item {
+#ScrollBar > .scrollbar-item {
     display: flex;
     justify-content: center;
     align-items: center;
     color: var(--theme-onSurface);
 }
 
-.scrollbar-item.scrollbar-text {
+#ScrollBar > .scrollbar-item.scrollbar-text {
     height: 12.5%;
 }
 
-.scrollbar-item#scrollbar-slider {
+#ScrollBar > .scrollbar-item#scrollbar-slider {
     height: 75%;
     align-items: unset;
 }
 
-#scrollbar-track {
+#ScrollBar #scrollbar-track {
     width: 0.1rem;
     height: 100%;
     background-color: var(--theme-outline);
 }
 
-#scrollbar-progress {
-    width: 0.1rem;
+#ScrollBar #scrollbar-progress {
+    width: 100%;
     height: 0;
     background-color: var(--theme-primary);
 }
 
-#scrollbar-thumb-wrapper {
+#ScrollBar #scrollbar-thumb-wrapper {
     position: relative;
     top: 100%;
     height: 2rem;
@@ -169,7 +195,62 @@ img {
     transform: translate(-0.95rem, -1rem);
 }
 
-#scrollbar-thumb {
+#ScrollBar #scrollbar-thumb {
+    top: 100%;
+    height: 1rem;
+    width: 1rem;
+    border-radius: 100%;
+    background-color: var(--theme-primary);
+}
+
+#ToolWrapper.horizontal > #ScrollBar{
+    display: flex;
+    width: 80vw;
+    height: 2.4rem;
+    min-height: unset;
+    align-items: center;
+    margin-top: unset;
+}
+
+#ToolWrapper.horizontal > #ScrollBar > .scrollbar-item {
+    display: flex;
+    justify-content: center;
+    color: var(--theme-onSurface);
+}
+
+#ToolWrapper.horizontal > #ScrollBar > .scrollbar-item.scrollbar-text {
+    width: 12.5%;
+}
+
+#ToolWrapper.horizontal > #ScrollBar > .scrollbar-item#scrollbar-slider {
+    width: 75%;
+    align-items: center;
+}
+
+#ToolWrapper.horizontal > #ScrollBar #scrollbar-track {
+    height: 0.1rem;
+    width: 100%;
+    background-color: var(--theme-outline);
+}
+
+#ToolWrapper.horizontal > #ScrollBar #scrollbar-progress {
+    height: 100%;
+    width: 0;
+    background-color: var(--theme-primary);
+}
+
+#ToolWrapper.horizontal > #ScrollBar #scrollbar-thumb-wrapper {
+    position: relative;
+    left: 100%;
+    height: 2rem;
+    width: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translate(-0.95rem, -1rem);
+}
+
+#ToolWrapper.horizontal > #ScrollBar #scrollbar-thumb {
     top: 100%;
     height: 1rem;
     width: 1rem;
@@ -186,10 +267,8 @@ img {
 
 #reader-footer {
     display: flex;
-    flex: 1;
-    justify-content: space-between;
-    min-height: 2rem;
-    padding: 0.5rem 2rem 0 2rem;
+    flex: 3;
+    padding: 0.2rem 2rem;
     background-color: var(--readerSettings-theme);
     color: var(--readerSettings-textColor);
     font-size: 1rem;
@@ -198,7 +277,13 @@ img {
 }
 
 .reader-footer-item {
-    display: flex;
+    flex: 1;
+}
+.reader-footer-item:first-child {
+    text-align: left;
+}
+.reader-footer-item:last-child {
+    text-align: right;
 }
 
 tts.highlight {
